--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -207,8 +207,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset:00<00:19, 25.64it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 500/500 [00:08<00:00, 62.13it/s]\n"
+      "You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset                           | 7/500 [00:01<00:57,  8.59it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 500/500 [00:08<00:00, 62.12it/s]\n"
      ]
     }
    ],
@@ -272,7 +272,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 500/500 [00:07<00:00, 63.49it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 500/500 [00:07<00:00, 69.19it/s]\n"
      ]
     }
    ],
@@ -404,15 +404,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"index\"] = df.index.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully created project.\n",
-      "Access your project at  https://hub.zenoml.com/project/aa7b5a7f-a93e-4cf3-bfed-352ab48b6413/Tweet%20Sentiment%20Analysis\n"
+      "Successfully updated project.\n",
+      "Access your project at  https://hub.zenoml.com/project/b31de552-b483-4cd1-9f97-b551531039a0/V2_Tweet%20Sentiment%20Analysis\n"
      ]
     },
     {
@@ -466,7 +475,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac1ad4b321f943e88a20b7c6636c0afb",
+       "model_id": "4a65295cbe5e455fb1629aa3774e586b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -488,7 +497,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\santy\\AppData\\Local\\Temp\\ipykernel_8288\\2519956436.py:29: SettingWithCopyWarning: \n",
+      "C:\\Users\\santy\\AppData\\Local\\Temp\\ipykernel_17076\\1564226634.py:29: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -499,7 +508,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ade12d15e0446a4850c6ec3039f5e45",
+       "model_id": "3a92cb1fd31b4716bf466080a220a571",
        "version_major": 2,
        "version_minor": 0
       },
@@ -521,7 +530,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\santy\\AppData\\Local\\Temp\\ipykernel_8288\\2519956436.py:29: SettingWithCopyWarning: \n",
+      "C:\\Users\\santy\\AppData\\Local\\Temp\\ipykernel_17076\\1564226634.py:29: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -532,7 +541,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e50a5c9692a475f847a629b66bacc28",
+       "model_id": "d616c13f6bff471c82ad93ceb3030b14",
        "version_major": 2,
        "version_minor": 0
       },
@@ -559,14 +568,14 @@
     "from zeno_client import ZenoClient, ZenoMetric\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('tweets.csv')\n",
-    "df = df.reset_index()\n",
+    "# df = pd.read_csv('tweets.csv')\n",
+    "# df = df.reset_index()\n",
     "\n",
     "# Initialize a client with the API key.\n",
-    "client = ZenoClient(\"zen_XfMBuNR1wNr9Cge-kO8Q-8O8t-H5hpTdMlMEqEwBDls\")\n",
+    "client = ZenoClient(\"your_key\")\n",
     "\n",
     "project = client.create_project(\n",
-    "    name=\"Tweet Sentiment Analysis\",\n",
+    "    name=\"V2_Tweet Sentiment Analysis\",\n",
     "    view=\"text-classification\",\n",
     "    metrics=[\n",
     "        ZenoMetric(name=\"accuracy\", type=\"mean\", columns=[\"correct\"]),\n",
@@ -583,6 +592,208 @@
     "    df_system[\"correct\"] = (df_system[model] == df[\"label\"]).astype(int)\n",
     "    \n",
     "    project.upload_system(df_system, name=model, id_column=\"index\", output_column=model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "      <th>roberta</th>\n",
+       "      <th>roberta_score</th>\n",
+       "      <th>gpt2</th>\n",
+       "      <th>gpt2_score</th>\n",
+       "      <th>input_length</th>\n",
+       "      <th>index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>@user @user what do these '1/2 naked pics' hav...</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>0.804726</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>0.913452</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>OH: “I had a blue penis while I was this” [pla...</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>0.866949</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>0.753407</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>@user @user That's coming, but I think the vic...</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>0.763724</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>0.999962</td>\n",
+       "      <td>87</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>I think I may be finally in with the in crowd ...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>0.774047</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>0.898783</td>\n",
+       "      <td>83</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>@user Wow,first Hugo Chavez and now Fidel Cast...</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>0.416397</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>0.986431</td>\n",
+       "      <td>133</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>Donnie is gonna deport the Menendez Brothers r...</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>0.915344</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>0.999632</td>\n",
+       "      <td>69</td>\n",
+       "      <td>495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>Still reading #SettleForMore @user #fridayreads</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>0.797208</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>0.999972</td>\n",
+       "      <td>47</td>\n",
+       "      <td>496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>#Chocolate cupcake #candle melting with its sw...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>0.951857</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>0.999672</td>\n",
+       "      <td>96</td>\n",
+       "      <td>497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>Is this leaf ?Can I eat ?Open the leaf!Oh! Thi...</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>0.664862</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>0.999548</td>\n",
+       "      <td>101</td>\n",
+       "      <td>498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>\"We have lost everything\": Syrians return to r...</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>0.751955</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>0.994244</td>\n",
+       "      <td>92</td>\n",
+       "      <td>499</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  text     label   roberta  \\\n",
+       "0    @user @user what do these '1/2 naked pics' hav...   neutral  negative   \n",
+       "1    OH: “I had a blue penis while I was this” [pla...   neutral   neutral   \n",
+       "2    @user @user That's coming, but I think the vic...   neutral   neutral   \n",
+       "3    I think I may be finally in with the in crowd ...  positive  positive   \n",
+       "4    @user Wow,first Hugo Chavez and now Fidel Cast...  negative   neutral   \n",
+       "..                                                 ...       ...       ...   \n",
+       "495  Donnie is gonna deport the Menendez Brothers r...  negative  negative   \n",
+       "496    Still reading #SettleForMore @user #fridayreads   neutral   neutral   \n",
+       "497  #Chocolate cupcake #candle melting with its sw...  positive  positive   \n",
+       "498  Is this leaf ?Can I eat ?Open the leaf!Oh! Thi...   neutral  positive   \n",
+       "499  \"We have lost everything\": Syrians return to r...   neutral  negative   \n",
+       "\n",
+       "     roberta_score      gpt2  gpt2_score  input_length index  \n",
+       "0         0.804726  positive    0.913452            96     0  \n",
+       "1         0.866949   neutral    0.753407            72     1  \n",
+       "2         0.763724  positive    0.999962            87     2  \n",
+       "3         0.774047  positive    0.898783            83     3  \n",
+       "4         0.416397  positive    0.986431           133     4  \n",
+       "..             ...       ...         ...           ...   ...  \n",
+       "495       0.915344   neutral    0.999632            69   495  \n",
+       "496       0.797208  positive    0.999972            47   496  \n",
+       "497       0.951857  negative    0.999672            96   497  \n",
+       "498       0.664862  negative    0.999548           101   498  \n",
+       "499       0.751955  positive    0.994244            92   499  \n",
+       "\n",
+       "[500 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -681,19 +892,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Write down the slice you select\n",
     "\n",
-    "slice_description = \"\"\n",
+    "slice_description = \"Tweets con violencia de género\"\n",
     "\n",
     "## Write down all generated test cases here\n",
     "\n",
     "generated_test_cases = [\n",
-    "    \"\",\n",
+    "\"Women should know their place.\",\n",
+    "\n",
+    "\"She's just asking for it with the way she dresses.\",\n",
+    "\n",
+    "\"Why would a woman want to be in charge? She'll only make a mess.\",\n",
+    "\n",
+    "\"Girls are only good for looking pretty, not for serious work.\",\n",
+    "\n",
+    "\"A woman is only valuable when she’s quiet and obedient.\",\n",
+    "\n",
+    "\"She’s too emotional to make important decisions.\",\n",
+    "\n",
+    "\"Women are just drama queens who can't take a joke.\",\n",
+    "\n",
+    "\"Why do women always have to complain about everything?\",\n",
+    "\n",
+    "\"She was asking for trouble when she went out like that.\",\n",
+    "\n",
+    "\"It's hard to take a woman seriously when she's crying.\",\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Women should know their place.',\n",
+       " \"She's just asking for it with the way she dresses.\",\n",
+       " \"Why would a woman want to be in charge? She'll only make a mess.\",\n",
+       " 'Girls are only good for looking pretty, not for serious work.',\n",
+       " 'A woman is only valuable when she’s quiet and obedient.',\n",
+       " 'She’s too emotional to make important decisions.',\n",
+       " \"Women are just drama queens who can't take a joke.\",\n",
+       " 'Why do women always have to complain about everything?',\n",
+       " 'She was asking for trouble when she went out like that.',\n",
+       " \"It's hard to take a woman seriously when she's crying.\"]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generated_test_cases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nuevos = pd.DataFrame({'text': generated_test_cases})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 500 entries, 0 to 499\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   text           500 non-null    object \n",
+      " 1   label          500 non-null    object \n",
+      " 2   roberta        500 non-null    object \n",
+      " 3   roberta_score  500 non-null    float64\n",
+      " 4   gpt2           500 non-null    object \n",
+      " 5   gpt2_score     500 non-null    float64\n",
+      " 6   input_length   500 non-null    int64  \n",
+      " 7   index          500 non-null    object \n",
+      "dtypes: float64(2), int64(1), object(5)\n",
+      "memory usage: 31.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   }
  ],
